--- a/src/pages/forecast/forecast.html
+++ b/src/pages/forecast/forecast.html
@@ -5,23 +5,21 @@
   Ionic pages and navigation.
 -->
 <ion-header>
-
-  <ion-navbar color="purple">
+  <ion-navbar [color] ="myColor">
     <ion-title>{{cityWeather.name}} : 7 days  forecast</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
-<ion-content padding>
-	<ion-list>
-      <ion-item *ngFor="let weather of forecast">
-        <ion-thumbnail item-left>
+<ion-content padding class="back">
+	<ion-grid>
+      <ion-row wrap>
+        <ion-col width-50 *ngFor="let weather of forecast" text-center>
+          <h4 style="color: #ba9d37">{{weather.dt * 1000 | date:'EEEE' }}</h4>
           <img src="http://openweathermap.org/img/w/{{weather.weather[0].icon}}.png"/>
-        </ion-thumbnail>
-        <h2>{{weather.dt * 1000 | date:'EEEE' }}</h2>
-        <h3>High: {{weather.temp.max|convertTemperature}} </h3>
-        <h3>Low: {{weather.temp.min| convertTemperature}} </h3>
-      </ion-item>
-    </ion-list>
+          <h6> {{weather.temp.max|convertTemperature}} /{{weather.temp.min| convertTemperature}} </h6>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
 </ion-content>
