--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
   <link rel="icon" type="image/x-icon" href="assets/icon/favicon.ico">
   <link rel="manifest" href="manifest.json">
   <meta name="theme-color" content="#4e8ef7">
-  
+
   <!-- cordova.js required for cordova apps -->
   <script src="cordova.js"></script>
 
@@ -32,7 +32,8 @@
   <!-- Ionic's root component and where the app will load -->
   <ion-app></ion-app>
 
-  
+  <script src="https://maps.googleapis.com/maps/api/js"></script>
+
 
   <script src="../assets/leaflet.js"></script>
   <!-- The polyfills js is generated during the build process -->
