--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -2,6 +2,7 @@
   <ion-navbar color="purple">
   <ion-buttons end>
       <button ion-button color="dark" (click)="addWeather()"><ion-icon name="add-circle"></ion-icon></button>
+      <button ion-button color="dark" (click)="share()"><ion-icon name="md-share"></ion-icon></button>
       <button ion-button color="dark" (click)="more($event)"><ion-icon name="more"></ion-icon></button>
     </ion-buttons>
     <ion-title left>
@@ -11,15 +12,6 @@
 </ion-header>
 
 <ion-content class="back">
- <ion-fab top right edge style="padding: 25px;">
-    <button ion-fab color="purple" mini><ion-icon name="md-share"></ion-icon></button>
-    <ion-fab-list>
-      <button ion-fab><ion-icon color="primary" name="logo-facebook" (click)="sharebyFacebook()"></ion-icon></button>
-      <button ion-fab><ion-icon name="logo-twitter" (click)="sharebyTwitter()"></ion-icon></button>
-      <button ion-fab><ion-icon style="color: #008000" name="logo-whatsapp" (click)="sharebyWhatsapp()"></ion-icon></button>
-      <button ion-fab><ion-icon color="danger" name="logo-googleplus"></ion-icon></button>
-    </ion-fab-list>
-  </ion-fab>
 	<ion-slides>
       <weather
         [weather]="localWeather"
